# moex_hft

./: .gitignore  CMakeLists.txt  FastProtocolManager.cpp  FastProtocolManager.h  FeedConnection.cpp  FeedConnection.h  FixProtocolManager.h  HftConsole.cpp  ItoaTester.h  LogManager.cpp  MarketInfo.h  MarketServerInfo.h  ProtocolHistoryManager.cpp  UTCTimeConverter.cpp  UTCTimeConverter.h  UTCTimeConverterTester.cpp  UTCTimeConverterTester.h  WinSockManager.cpp
cmake/: CleanCmake.cmake  FindCSharp.cmake  FindDPDK.cmake  FindMono.cmake  FindTinyXML2.cmake  GetPkgVariable.cmake
prebuild/: prebuild.sln  prebuild.userprefs
prebuild/prebuild/: Program.cs  prebuild.csproj
prebuild/prebuild/Properties/: AssemblyInfo.cs
scripts/: script.sh
source/include/: ConnectionParameters.h  ConsoleManager.h  DtoaConverter.h  FastProtocolManager.h  FastProtocolTester.h  FastTypes.h  FeedChannel.h  FeedConnection.h  FeedConnections.h  FeedTypes.h  FixMessage.h  FixProtocolMacros.h  FixProtocolManager.h  FixProtocolManagerTester.h  FixTypes.h  ItoaConverter.h  LogErrorMessageCodes.h  LogManager.h  MarketInfo.h  MarketServerInfo.h  ProgramStatistics.h  ProtocolHistoryManager.h  Robot.h  Settings.h  SocketBufferManager.h  SocketThreadManager.h  Stopwatch.h  Types.h  UTCTimeConverter.h  WinSockManager.h
source/include/Calculators/: OrderBookInfoCalculator.h
source/include/Converters/: DtoaConverter.h  ItoaConverter.h  UTCTimeConverter.h
source/include/Fast/: FastProtocolManager.h  FastTypes.h
source/include/Feeds/: AstsFeedChannel.h  FeedChannel.h  FeedConnection.h  FeedConnections.h  FeedTypes.h
source/include/Feeds/Curr/: CurrHr.h  CurrIdf.h  CurrIsf.h  CurrMsr.h  CurrMss.h  CurrOlr.h  CurrOls.h  CurrTlr.h  CurrTls.h
source/include/Feeds/Fond/: FondHr.h  FondIdf.h  FondIsf.h  FondMsr.h  FondMss.h  FondOlr.h  FondOls.h  FondTlr.h  FondTls.h
source/include/Feeds/Forts/: FortsFeedChannel.h  FortsFeeds.h  FortsMarketDataGroup.h
source/include/Fix/: FixMessage.h  FixProtocolMacros.h  FixProtocolManager.h  FixTypes.h
source/include/Lib/: AutoAllocatePointerList.h  HashTable.h  HrPointerList.h  PointerList.h  SimpleList.h  StringHash.h  StringIdComparer.h
source/include/Managers/: CommandManager.h  ConsoleManager.h  DebugInfoManager.h  LogErrorMessageCodes.h  LogManager.h  SocketBufferManager.h  SocketThreadManager.h  WinSockManager.h
source/include/MarketData/: MDEntryQueue.h  MarketDataEntryQueue.h  MarketDataTable.h  MarketSymbolInfo.h  OrderBookInfo.h  OrderBookInfoList.h  OrderBookTable.h  OrderInfo.h  OrderedListManager.h  QuoteInfo.h  StatisticInfo.h  StatisticItem.h  SymbolManager.h  TradeInfo.h
source/include/PerformanceProfiler/: PerformanceProfiler.h  PerformanceProfilerItem.h
source/include/Test/: DecimalTester.h  FastProtocolTester.h  FeedConnectionTest.h  FeedConnectionTester.h  FixProtocolManagerTester.h  FortsOrderBookTester.h  HashStringTester.h  HashTableTester.h  HistoricalReplayTester.h  InstrumentDefinitionTester.h  ItoaTester.h  OrderBookTester.h  OrderBookTesterCurr.h  OrderBookTesterFond.h  OrderTester.h  OrderTesterCurr.h  OrderTesterFond.h  PointerListTester.h  SecurityDefinitionTester.h  SecurityStatusTester.h  StatisticsTester.h  StatisticsTesterCurr.h  StatisticsTesterFond.h  SymbolManagerTester.h  TestMessagesHelper.h  TestTemplateInfo.h  TradeTester.h  TradeTesterCurr.h  TradeTesterFond.h  UTCTimeConverterTester.h
source/src/: AstsFeedChannel.cpp  ConsoleManager.cpp  DtoaConverter.cpp  FastProtocolManager.cpp  FastProtocolTester.cpp  FeedChannel.cpp  FeedConnection.cpp  FixProtocolManager.cpp  FixProtocolManagerTester.cpp  FixTypes.cpp  FortsFeedChannel.cpp  FortsMarketDataGroup.cpp  HftConsole.cpp  ItoaConverter.cpp  ItoaTester.cpp  LogErrorMessageCodes.cpp  LogManager.cpp  MarketInfo.cpp  MarketServerInfo.cpp  PerformanceProfiler.cpp  ProgramStatistics.cpp  Robot.cpp  Settings.cpp  SocketBufferManager.cpp  SocketThreadManager.cpp  Stopwatch.cpp  Types.cpp  UTCTimeConverter.cpp  UTCTimeConverterTester.cpp  WinSockManager.cpp  tinyxml2.cpp
source/src/Converters/: DtoaConverter.cpp  ItoaConverter.cpp  UTCTimeConverter.cpp
source/src/Fast/: FastProtocolManager.cpp  FastTypes.cpp
source/src/Fix/: FixProtocolManager.cpp  FixTypes.cpp
source/src/Lib/: HashTable.cpp
source/src/Managers/: ConsoleManager.cpp  DebugInfoManager.cpp  LogErrorMessageCodes.cpp  LogManager.cpp  SocketBufferManager.cpp  SocketThreadManager.cpp  WinSockManager.cpp
source/src/MarketData/: MDEntryQueue.cpp  StatisticInfo.cpp
source/src/Test/: FastProtocolTester.cpp  FixProtocolManagerTester.cpp  ItoaTester.cpp  TestMessagesHelper.cpp  UTCTimeConverterTester.cpp
test/: symbols
test/data/: FIX50SP2-2015-Apr.xml  FIX50SP2-2017-Mar.xml  asts_config_test.xml  config_test.xml  forts_config_test.xml  forts_templates.xml
tools/: Program.cs  generator.csproj  generator.sln
